framework/y.output
State 189 conflicts: 1 shift/reduce


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: EXTDEFS

    2 EXTDEFS: EXTDEF EXTDEFS
    3        | %empty

    4 EXTDEF: TYPE EXTVARS SEMI
    5       | STSPEC SEXTVARS SEMI
    6       | TYPE FUNC STMTBLOCK

    7 SEXTVARS: ID
    8         | ID COMMA SEXTVARS
    9         | %empty

   10 EXTVARS: VAR
   11        | VAR COMMA EXTVARS
   12        | VAR ASSIGN INIT
   13        | VAR ASSIGN INIT COMMA EXTVARS
   14        | %empty

   15 STSPEC: STRUCT ID LC SDEFS RC
   16       | STRUCT LC SDEFS RC
   17       | STRUCT ID

   18 FUNC: ID LP PARAS RP

   19 PARAS: TYPE ID COMMA PARAS
   20      | TYPE ID
   21      | %empty

   22 STMTBLOCK: LC DEFS STMTS RC

   23 STMTS: STMT STMTS
   24      | %empty

   25 STMT: EXP SEMI
   26     | STMTBLOCK
   27     | RETURN EXPS SEMI
   28     | IF LP EXPS RP STMT
   29     | IF LP EXPS RP STMT ELSE STMT
   30     | FOR LP EXP SEMI EXP SEMI EXP RP STMT
   31     | CONT SEMI
   32     | BREAK SEMI
   33     | READ LP EXPS RP SEMI
   34     | WRITE LP EXPS RP SEMI

   35 DEFS: TYPE DECS SEMI DEFS
   36     | STSPEC SEXTVARS SEMI DEFS
   37     | %empty

   38 SDEFS: TYPE SDECS SEMI SDEFS
   39      | %empty

   40 SDECS: ID COMMA SDECS
   41      | ID

   42 DECS: VAR
   43     | VAR COMMA DECS
   44     | VAR ASSIGN INIT COMMA DECS
   45     | VAR ASSIGN INIT

   46 VAR: ID
   47    | ID LB INT RB

   48 INIT: EXPS
   49     | LC ARGS RC

   50 EXP: EXPS
   51    | %empty

   52 EXPS: EXPS AND_OP EXPS
   53     | EXPS OR_OP EXPS
   54     | EXPS LE_OP EXPS
   55     | EXPS GE_OP EXPS
   56     | EXPS EQ_OP EXPS
   57     | EXPS NE_OP EXPS
   58     | EXPS ASSIGN EXPS
   59     | EXPS ADD_ASSIGN EXPS
   60     | EXPS SUB_ASSIGN EXPS
   61     | EXPS MUL_ASSIGN EXPS
   62     | EXPS DIV_ASSIGN EXPS
   63     | EXPS AND_ASSIGN EXPS
   64     | EXPS MOD_ASSIGN EXPS
   65     | EXPS XOR_ASSIGN EXPS
   66     | EXPS OR_ASSIGN EXPS
   67     | EXPS RIGHT_OP EXPS
   68     | EXPS LEFT_OP EXPS
   69     | EXPS RIGHT_ASSIGN EXPS
   70     | EXPS LEFT_ASSIGN EXPS
   71     | EXPS PLUS_OP EXPS
   72     | EXPS MINUS_OP EXPS
   73     | EXPS BIT_AND_OP EXPS
   74     | EXPS PRODUCT_OP EXPS
   75     | EXPS DIV_OP EXPS
   76     | EXPS MOD_OP EXPS
   77     | EXPS LT_OP EXPS
   78     | EXPS GT_OP EXPS
   79     | EXPS BIT_XOR_OP EXPS
   80     | EXPS BIT_OR_OP EXPS
   81     | UNARYOP EXPS
   82     | LP EXPS RP
   83     | ID LP ARGS RP
   84     | ID ARRS
   85     | ID DOT ID
   86     | INT

   87 ARRS: LB EXPS RB
   88     | %empty

   89 ARGS: EXPS COMMA ARGS
   90     | EXP

   91 UNARYOP: PLUS_OP
   92        | MINUS_OP
   93        | BIT_NOT_OP
   94        | LOG_NOT_OP
   95        | INC_OP
   96        | DEC_OP


Terminals, with rules where they appear

$end (0) 0
error (256)
ADD_ASSIGN (258) 59
SUB_ASSIGN (259) 60
MUL_ASSIGN (260) 61
DIV_ASSIGN (261) 62
AND_ASSIGN (262) 63
MOD_ASSIGN (263) 64
XOR_ASSIGN (264) 65
OR_ASSIGN (265) 66
RIGHT_OP (266) 67
LEFT_OP (267) 68
AND_OP (268) 52
OR_OP (269) 53
EQ_OP (270) 56
NE_OP (271) 57
RIGHT_ASSIGN (272) 69
LEFT_ASSIGN (273) 70
LOG_NOT_OP (274) 94
BIT_NOT_OP (275) 93
READ (276) 33
WRITE (277) 34
INT (278) 47 86
ID (279) 7 8 15 17 18 19 20 40 41 46 47 83 84 85
SEMI (280) 4 5 25 27 30 31 32 33 34 35 36 38
COMMA (281) 8 11 13 19 40 43 44 89
TYPE (282) 4 6 19 20 35 38
LP (283) 18 28 29 30 33 34 82 83
RP (284) 18 28 29 30 33 34 82 83
LB (285) 47 87
RB (286) 47 87
LC (287) 15 16 22 49
RC (288) 15 16 22 49
STRUCT (289) 15 16 17
RETURN (290) 27
IF (291) 28 29
ELSE (292) 29
BREAK (293) 32
CONT (294) 31
FOR (295) 30
DOT (296) 85
ASSIGN (297) 12 13 44 45 58
IF_NO_ELSE (298)
ELSE_AFTER_IF (299)
BIT_OR_OP (300) 80
BIT_XOR_OP (301) 79
BIT_AND_OP (302) 73
GE_OP (303) 55
LE_OP (304) 54
GT_OP (305) 78
LT_OP (306) 77
PLUS_OP (307) 71 91
MINUS_OP (308) 72 92
PRODUCT_OP (309) 74
DIV_OP (310) 75
MOD_OP (311) 76
INC_OP (312) 95
DEC_OP (313) 96
UNARY (314)


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
PROGRAM (61)
    on left: 1, on right: 0
EXTDEFS (62)
    on left: 2 3, on right: 1 2
EXTDEF (63)
    on left: 4 5 6, on right: 2
SEXTVARS (64)
    on left: 7 8 9, on right: 5 8 36
EXTVARS (65)
    on left: 10 11 12 13 14, on right: 4 11 13
STSPEC (66)
    on left: 15 16 17, on right: 5 36
FUNC (67)
    on left: 18, on right: 6
PARAS (68)
    on left: 19 20 21, on right: 18 19
STMTBLOCK (69)
    on left: 22, on right: 6 26
STMTS (70)
    on left: 23 24, on right: 22 23
STMT (71)
    on left: 25 26 27 28 29 30 31 32 33 34, on right: 23 28 29 30
DEFS (72)
    on left: 35 36 37, on right: 22 35 36
SDEFS (73)
    on left: 38 39, on right: 15 16 38
SDECS (74)
    on left: 40 41, on right: 38 40
DECS (75)
    on left: 42 43 44 45, on right: 35 43 44
VAR (76)
    on left: 46 47, on right: 10 11 12 13 42 43 44 45
INIT (77)
    on left: 48 49, on right: 12 13 44 45
EXP (78)
    on left: 50 51, on right: 25 30 90
EXPS (79)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
    70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86, on right: 27
    28 29 33 34 48 50 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 87 89
ARRS (80)
    on left: 87 88, on right: 84
ARGS (81)
    on left: 89 90, on right: 49 83 89
UNARYOP (82)
    on left: 91 92 93 94 95 96, on right: 81


State 0

    0 $accept: . PROGRAM $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (EXTDEFS)

    PROGRAM  go to state 3
    EXTDEFS  go to state 4
    EXTDEF   go to state 5
    STSPEC   go to state 6


State 1

    4 EXTDEF: TYPE . EXTVARS SEMI
    6       | TYPE . FUNC STMTBLOCK

    ID  shift, and go to state 7

    $default  reduce using rule 14 (EXTVARS)

    EXTVARS  go to state 8
    FUNC     go to state 9
    VAR      go to state 10


State 2

   15 STSPEC: STRUCT . ID LC SDEFS RC
   16       | STRUCT . LC SDEFS RC
   17       | STRUCT . ID

    ID  shift, and go to state 11
    LC  shift, and go to state 12


State 3

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 13


State 4

    1 PROGRAM: EXTDEFS .

    $default  reduce using rule 1 (PROGRAM)


State 5

    2 EXTDEFS: EXTDEF . EXTDEFS

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (EXTDEFS)

    EXTDEFS  go to state 14
    EXTDEF   go to state 5
    STSPEC   go to state 6


State 6

    5 EXTDEF: STSPEC . SEXTVARS SEMI

    ID  shift, and go to state 15

    $default  reduce using rule 9 (SEXTVARS)

    SEXTVARS  go to state 16


State 7

   18 FUNC: ID . LP PARAS RP
   46 VAR: ID .
   47    | ID . LB INT RB

    LP  shift, and go to state 17
    LB  shift, and go to state 18

    $default  reduce using rule 46 (VAR)


State 8

    4 EXTDEF: TYPE EXTVARS . SEMI

    SEMI  shift, and go to state 19


State 9

    6 EXTDEF: TYPE FUNC . STMTBLOCK

    LC  shift, and go to state 20

    STMTBLOCK  go to state 21


State 10

   10 EXTVARS: VAR .
   11        | VAR . COMMA EXTVARS
   12        | VAR . ASSIGN INIT
   13        | VAR . ASSIGN INIT COMMA EXTVARS

    COMMA   shift, and go to state 22
    ASSIGN  shift, and go to state 23

    $default  reduce using rule 10 (EXTVARS)


State 11

   15 STSPEC: STRUCT ID . LC SDEFS RC
   17       | STRUCT ID .

    LC  shift, and go to state 24

    $default  reduce using rule 17 (STSPEC)


State 12

   16 STSPEC: STRUCT LC . SDEFS RC

    TYPE  shift, and go to state 25

    $default  reduce using rule 39 (SDEFS)

    SDEFS  go to state 26


State 13

    0 $accept: PROGRAM $end .

    $default  accept


State 14

    2 EXTDEFS: EXTDEF EXTDEFS .

    $default  reduce using rule 2 (EXTDEFS)


State 15

    7 SEXTVARS: ID .
    8         | ID . COMMA SEXTVARS

    COMMA  shift, and go to state 27

    $default  reduce using rule 7 (SEXTVARS)


State 16

    5 EXTDEF: STSPEC SEXTVARS . SEMI

    SEMI  shift, and go to state 28


State 17

   18 FUNC: ID LP . PARAS RP

    TYPE  shift, and go to state 29

    $default  reduce using rule 21 (PARAS)

    PARAS  go to state 30


State 18

   47 VAR: ID LB . INT RB

    INT  shift, and go to state 31


State 19

    4 EXTDEF: TYPE EXTVARS SEMI .

    $default  reduce using rule 4 (EXTDEF)


State 20

   22 STMTBLOCK: LC . DEFS STMTS RC

    TYPE    shift, and go to state 32
    STRUCT  shift, and go to state 2

    $default  reduce using rule 37 (DEFS)

    STSPEC  go to state 33
    DEFS    go to state 34


State 21

    6 EXTDEF: TYPE FUNC STMTBLOCK .

    $default  reduce using rule 6 (EXTDEF)


State 22

   11 EXTVARS: VAR COMMA . EXTVARS

    ID  shift, and go to state 35

    $default  reduce using rule 14 (EXTVARS)

    EXTVARS  go to state 36
    VAR      go to state 10


State 23

   12 EXTVARS: VAR ASSIGN . INIT
   13        | VAR ASSIGN . INIT COMMA EXTVARS

    LOG_NOT_OP  shift, and go to state 37
    BIT_NOT_OP  shift, and go to state 38
    INT         shift, and go to state 39
    ID          shift, and go to state 40
    LP          shift, and go to state 41
    LC          shift, and go to state 42
    PLUS_OP     shift, and go to state 43
    MINUS_OP    shift, and go to state 44
    INC_OP      shift, and go to state 45
    DEC_OP      shift, and go to state 46

    INIT     go to state 47
    EXPS     go to state 48
    UNARYOP  go to state 49


State 24

   15 STSPEC: STRUCT ID LC . SDEFS RC

    TYPE  shift, and go to state 25

    $default  reduce using rule 39 (SDEFS)

    SDEFS  go to state 50


State 25

   38 SDEFS: TYPE . SDECS SEMI SDEFS

    ID  shift, and go to state 51

    SDECS  go to state 52


State 26

   16 STSPEC: STRUCT LC SDEFS . RC

    RC  shift, and go to state 53


State 27

    8 SEXTVARS: ID COMMA . SEXTVARS

    ID  shift, and go to state 15

    $default  reduce using rule 9 (SEXTVARS)

    SEXTVARS  go to state 54


State 28

    5 EXTDEF: STSPEC SEXTVARS SEMI .

    $default  reduce using rule 5 (EXTDEF)


State 29

   19 PARAS: TYPE . ID COMMA PARAS
   20      | TYPE . ID

    ID  shift, and go to state 55


State 30

   18 FUNC: ID LP PARAS . RP

    RP  shift, and go to state 56


State 31

   47 VAR: ID LB INT . RB

    RB  shift, and go to state 57


State 32

   35 DEFS: TYPE . DECS SEMI DEFS

    ID  shift, and go to state 35

    DECS  go to state 58
    VAR   go to state 59


State 33

   36 DEFS: STSPEC . SEXTVARS SEMI DEFS

    ID  shift, and go to state 15

    $default  reduce using rule 9 (SEXTVARS)

    SEXTVARS  go to state 60


State 34

   22 STMTBLOCK: LC DEFS . STMTS RC

    LOG_NOT_OP  shift, and go to state 37
    BIT_NOT_OP  shift, and go to state 38
    READ        shift, and go to state 61
    WRITE       shift, and go to state 62
    INT         shift, and go to state 39
    ID          shift, and go to state 40
    LP          shift, and go to state 41
    LC          shift, and go to state 20
    RETURN      shift, and go to state 63
    IF          shift, and go to state 64
    BREAK       shift, and go to state 65
    CONT        shift, and go to state 66
    FOR         shift, and go to state 67
    PLUS_OP     shift, and go to state 43
    MINUS_OP    shift, and go to state 44
    INC_OP      shift, and go to state 45
    DEC_OP      shift, and go to state 46

    SEMI      reduce using rule 51 (EXP)
    $default  reduce using rule 24 (STMTS)

    STMTBLOCK  go to state 68
    STMTS      go to state 69
    STMT       go to state 70
    EXP        go to state 71
    EXPS       go to state 72
    UNARYOP    go to state 49


State 35

   46 VAR: ID .
   47    | ID . LB INT RB

    LB  shift, and go to state 18

    $default  reduce using rule 46 (VAR)


State 36

   11 EXTVARS: VAR COMMA EXTVARS .

    $default  reduce using rule 11 (EXTVARS)


State 37

   94 UNARYOP: LOG_NOT_OP .

    $default  reduce using rule 94 (UNARYOP)


State 38

   93 UNARYOP: BIT_NOT_OP .

    $default  reduce using rule 93 (UNARYOP)


State 39

   86 EXPS: INT .

    $default  reduce using rule 86 (EXPS)


State 40

   83 EXPS: ID . LP ARGS RP
   84     | ID . ARRS
   85     | ID . DOT ID

    LP   shift, and go to state 73
    LB   shift, and go to state 74
    DOT  shift, and go to state 75

    $default  reduce using rule 88 (ARRS)

    ARRS  go to state 76


State 41

   82 EXPS: LP . EXPS RP

    LOG_NOT_OP  shift, and go to state 37
    BIT_NOT_OP  shift, and go to state 38
    INT         shift, and go to state 39
    ID          shift, and go to state 40
    LP          shift, and go to state 41
    PLUS_OP     shift, and go to state 43
    MINUS_OP    shift, and go to state 44
    INC_OP      shift, and go to state 45
    DEC_OP      shift, and go to state 46

    EXPS     go to state 77
    UNARYOP  go to state 49


State 42

   49 INIT: LC . ARGS RC

    LOG_NOT_OP  shift, and go to state 37
    BIT_NOT_OP  shift, and go to state 38
    INT         shift, and go to state 39
    ID          shift, and go to state 40
    LP          shift, and go to state 41
    PLUS_OP     shift, and go to state 43
    MINUS_OP    shift, and go to state 44
    INC_OP      shift, and go to state 45
    DEC_OP      shift, and go to state 46
